# notion_to_md

./: .gitignore  README.md  converting_notion_to_md  pyproject.toml
notion_to_md/: cli.py  data.py  file.py  folder.py  url.py
notion_to_md/work_with_dir/: get_.py
notion_to_md/work_with_file/: check_.py  copy_.py  create_.py  get_.py  process_.py  read_.py
notion_to_md/work_with_url/: create_.py  format_.py  process_.py  replace_.py
tests/: test_check_file.py  test_copy_file.py  test_get_file.py  test_process_filepath.py  test_read_file.py
